opt/logcenter/share/tests/rulebase/squid.expect
{"@timestamp":1725627417.284,"event.category":"network,web","event.provider":"access","event.tags":["squid","squid.access"],"http.request.method":"GET","http.response.bytes":688,"http.response.mime_type":"text/html","http.response.status_code":302,"originalmsg":"1725627417.284    118 10.50.1.11 TCP_MISS/302 688 GET http://www.debian.org/ - ORIGINAL_DST/194.177.211.216 text/html","source.ip":"10.50.1.11","squid.hierarchy_status":"ORIGINAL_DST","squid.last_peer":"194.177.211.216","squid.request_status":"TCP_MISS","squid.response_time_ms":118,"url.original":"http://www.debian.org/","user.name":"-"}
{"@timestamp":1725976484.617,"event.category":"network,web","event.provider":"access","event.tags":["squid","squid.access"],"http.request.method":"CONNECT","http.response.bytes":0,"http.response.mime_type":"-","http.response.status_code":0,"originalmsg":"1725976484.617     19 10.50.1.11 NONE_NONE/000 0 CONNECT 130.89.148.77:443 - HIER_NONE/- - squid.ssl.bump_mode=splice squid.ssl.sni=www.debian.org","source.ip":"10.50.1.11","squid.hierarchy_status":"HIER_NONE","squid.last_peer":"-","squid.request_status":"NONE_NONE","squid.response_time_ms":19,"squid.ssl.bump_mode":"splice","squid.ssl.sni":"www.debian.org","url.original":"130.89.148.77:443","user.name":"-"}
{"@timestamp":1725631953.393,"event.category":"network,web","event.provider":"access","event.tags":["squid","squid.access"],"http.request.method":"CONNECT","http.response.bytes":20296,"http.response.mime_type":"-","http.response.status_code":200,"originalmsg":"1725631953.393     75 10.50.1.11 TCP_TUNNEL/200 20296 CONNECT www.debian.org:443 - ORIGINAL_DST/130.89.148.77 - squid.ssl.bump_mode=splice squid.ssl.sni=www.debian.org","source.ip":"10.50.1.11","squid.hierarchy_status":"ORIGINAL_DST","squid.last_peer":"130.89.148.77","squid.request_status":"TCP_TUNNEL","squid.response_time_ms":75,"squid.ssl.bump_mode":"splice","squid.ssl.sni":"www.debian.org","url.original":"www.debian.org:443","user.name":"-"}
{"@timestamp":1725954621.388,"event.category":"network,web","event.provider":"access","event.tags":["squid","squid.access"],"http.request.method":"CONNECT","http.response.bytes":0,"http.response.mime_type":"-","http.response.status_code":0,"originalmsg":"1725954621.388      1 10.50.1.11 NONE_NONE/000 0 CONNECT 5.39.122.36:443 - HIER_NONE/- - squid.ssl.bump_mode=terminate squid.ssl.sni=-","source.ip":"10.50.1.11","squid.hierarchy_status":"HIER_NONE","squid.last_peer":"-","squid.request_status":"NONE_NONE","squid.response_time_ms":1,"squid.ssl.bump_mode":"terminate","squid.ssl.sni":"-","url.original":"5.39.122.36:443","user.name":"-"}
{"@timestamp":1725976493.018,"event.category":"network,web","event.provider":"access","event.tags":["squid","squid.access"],"http.request.method":"GET","http.response.bytes":3784,"http.response.mime_type":"text/html","http.response.status_code":403,"originalmsg":"1725976493.018      1 10.50.1.11 TCP_DENIED/403 3784 GET http://dl.rockylinux.org/ - HIER_NONE/- text/html","source.ip":"10.50.1.11","squid.hierarchy_status":"HIER_NONE","squid.last_peer":"-","squid.request_status":"TCP_DENIED","squid.response_time_ms":1,"url.original":"http://dl.rockylinux.org/","user.name":"-"}
{"@timestamp":1725976495.984,"event.category":"network,web","event.provider":"access","event.tags":["squid","squid.access"],"http.request.method":"CONNECT","http.response.bytes":0,"http.response.mime_type":"-","http.response.status_code":0,"originalmsg":"1725976495.984     19 10.50.1.11 NONE_NONE/000 0 CONNECT 199.232.198.132:443 - HIER_NONE/- - squid.ssl.bump_mode=terminate squid.ssl.sni=dl.rockylinux.org","source.ip":"10.50.1.11","squid.hierarchy_status":"HIER_NONE","squid.last_peer":"-","squid.request_status":"NONE_NONE","squid.response_time_ms":19,"squid.ssl.bump_mode":"terminate","squid.ssl.sni":"dl.rockylinux.org","url.original":"199.232.198.132:443","user.name":"-"}
{"@timestamp":1726047956.640,"event.category":"network,web","event.provider":"access","event.tags":["squid","squid.access"],"http.request.method":"CONNECT","http.response.bytes":0,"http.response.mime_type":"-","http.response.status_code":0,"originalmsg":"1726047956.640     40 10.50.1.11 NONE_NONE/000 0 CONNECT 199.232.194.132:443 - HIER_NONE/- - squid.ssl.bump_mode=bump squid.ssl.sni=dl.rockylinux.org","source.ip":"10.50.1.11","squid.hierarchy_status":"HIER_NONE","squid.last_peer":"-","squid.request_status":"NONE_NONE","squid.response_time_ms":40,"squid.ssl.bump_mode":"bump","squid.ssl.sni":"dl.rockylinux.org","url.original":"199.232.194.132:443","user.name":"-"}
{"@timestamp":1726047956.751,"event.category":"network,web","event.provider":"access","event.tags":["squid","squid.access"],"http.request.method":"GET","http.response.bytes":540,"http.response.mime_type":"text/plain","http.response.status_code":200,"originalmsg":"1726047956.751    108 10.50.1.11 TCP_MISS/200 540 GET https://dl.rockylinux.org/vault/README.txt - ORIGINAL_DST/199.232.194.132 text/plain squid.ssl.bump_mode=bump squid.ssl.sni=dl.rockylinux.org","source.ip":"10.50.1.11","squid.hierarchy_status":"ORIGINAL_DST","squid.last_peer":"199.232.194.132","squid.request_status":"TCP_MISS","squid.response_time_ms":108,"squid.ssl.bump_mode":"bump","squid.ssl.sni":"dl.rockylinux.org","url.original":"https://dl.rockylinux.org/vault/README.txt","user.name":"-"}
{"@timestamp":1726048022.924,"event.category":"network,web","event.provider":"access","event.tags":["squid","squid.access"],"http.request.method":"GET","http.response.bytes":3775,"http.response.mime_type":"text/html","http.response.status_code":403,"originalmsg":"1726048022.924      0 10.50.1.11 TCP_DENIED/403 3775 GET https://linuxfr.org/aide - HIER_NONE/- text/html squid.ssl.bump_mode=bump squid.ssl.sni=linuxfr.org","source.ip":"10.50.1.11","squid.hierarchy_status":"HIER_NONE","squid.last_peer":"-","squid.request_status":"TCP_DENIED","squid.response_time_ms":0,"squid.ssl.bump_mode":"bump","squid.ssl.sni":"linuxfr.org","url.original":"https://linuxfr.org/aide","user.name":"-"}
{"@timestamp":1726048134.261,"event.category":"network,web","event.provider":"access","event.tags":["squid","squid.access"],"http.request.method":"-","http.response.bytes":0,"http.response.mime_type":"-","http.response.status_code":0,"originalmsg":"1726048134.261      0 10.50.1.11 NONE_NONE/000 0 - error:transaction-end-before-headers - HIER_NONE/- -","source.ip":"10.50.1.11","squid.hierarchy_status":"HIER_NONE","squid.last_peer":"-","squid.request_status":"NONE_NONE","squid.response_time_ms":0,"url.original":"error:transaction-end-before-headers","user.name":"-"}
{"@timestamp":1726048134.261,"event.category":"network,web","event.provider":"access","event.tags":["squid","squid.access"],"http.request.method":"-","http.response.bytes":0,"http.response.mime_type":"-","http.response.status_code":0,"originalmsg":"1726048134.261      0 10.50.1.11 NONE_NONE/000 0 - error:transaction-end-before-headers - HIER_NONE/- - squid.ssl.bump_mode=peek squid.ssl.sni=-","source.ip":"10.50.1.11","squid.hierarchy_status":"HIER_NONE","squid.last_peer":"-","squid.request_status":"NONE_NONE","squid.response_time_ms":0,"squid.ssl.bump_mode":"peek","squid.ssl.sni":"-","url.original":"error:transaction-end-before-headers","user.name":"-"}
{"@timestamp":1750233799.555,"event.category":"network,web","event.provider":"access","event.tags":["squid","squid.access"],"http.request.method":"CONNECT","http.response.bytes":6962,"http.response.mime_type":"text/html","http.response.status_code":407,"originalmsg":"1750233799.555      9 10.109.21.45 TCP_DENIED/407 6962 CONNECT umwatson.events.data.microsoft.com:443 du-foobar@ACME.LOCAL HIER_NONE/- text/html","source.ip":"10.109.21.45","squid.hierarchy_status":"HIER_NONE","squid.last_peer":"-","squid.request_status":"TCP_DENIED","squid.response_time_ms":9,"url.original":"umwatson.events.data.microsoft.com:443","user.domain":"ACME.LOCAL","user.name":"du-foobar"}
